--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -48,7 +48,7 @@
                 <tr><td>Rep. to vote</td><td>{{repVote}}</td></tr>
                 <tr><td>Rep. to nominate</td><td>{{repNominate}}</td></tr>
                 <tr><td>Positions</td><td>{{numPositions}}</td></tr>
-                <tr><td>Candidates <span class="small-count" data-prefix="(" data-suffix=")">({{arrNominees.length}}</span></td>
+                <tr><td>Candidates <span class="small-count" data-prefix="(" data-suffix=")">{{arrNominees.length}}</span></td>
                     {{#if arrNominees.length}}
                     <td><ul class="list">
                         {{#each arrNominees}}
@@ -59,7 +59,7 @@
                     <td></td>
                     {{/if}}
                 </tr>
-                <tr><td>Winners <span class="small-count" data-prefix="(" data-suffix=")">({{arrWinners.length}}</span></td>
+                <tr><td>Winners <span class="small-count" data-prefix="(" data-suffix=")">{{arrWinners.length}}</span></td>
                     {{#if arrWinners.length}}
                     <td><ul class="list">
                         {{#each arrWinners}}
@@ -75,7 +75,7 @@
             </table>
 
             <table>
-                <tr><td>Current Mods <span class="small-count" data-prefix="(" data-suffix=")">({{currentSiteMods.length}}</span></td>
+                <tr><td>Current Mods <span class="small-count" data-prefix="(" data-suffix=")">{{currentSiteMods.length}}</span></td>
                     {{#if currentSiteMods.length}}
                     <td><ul class="list">
                         {{#each currentSiteMods}}
