--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -5,6 +5,7 @@
   --border-color: #999;
   --margin-size: 40px;
 }
+
 * {
   font-family: Arial, sans-serif;
   line-height: 1.3;
@@ -36,7 +37,6 @@ h1 {
   font-size: 1.4em;
   color: var(--heading-colour);
 }
-
 h2 {
   font-size: 1.2em;
   color: var(--heading-colour);
@@ -47,20 +47,13 @@ ul {
   padding-inline-start: 20px;
   padding-left: 20px;
 }
-
 li {
   margin: 0.2em 0;
-}
-
-td .list {
-  margin: 0;
-  font-size: 0.9em;
 }
 
 a {
   color: var(--link-colour);
 }
-
 a:visited {
   color: var(--text-colour);
 }
@@ -100,6 +93,11 @@ td:last-child {
 
 th {
   text-align: left;
+}
+
+td .list {
+  margin: 0;
+  font-size: 0.9em;
 }
 
 /* Nested tables */
@@ -144,15 +142,12 @@ form {
   max-width: 800px;
   margin-top: 30px;
 }
-
 form * {
   font-size: 0.9rem;
 }
-
 form label {
   font-weight: bold;
 }
-
 form input,
 form textarea {
   display: block;
@@ -162,16 +157,13 @@ form textarea {
   border-radius: 5px;
   border: 1px solid var(--border-color);
 }
-
 form input::placeholder {
   color: #ccc;
   font-size: 0.9em;
 }
-
 form textarea {
   min-height: 130px;
 }
-
 form button {
   padding: 8px 20px;
   font-size: 1em;
@@ -183,17 +175,14 @@ form button {
   flex-wrap: wrap;
   align-items: start;
 }
-
 .dashboard section {
   flex: 1 1 calc(33% - var(--margin-size));
   max-width: 620px;
   margin-right: var(--margin-size);
 }
-
 .dashboard section:last-child {
   margin-right: 0;
 }
-
 .dashboard section aside {
   margin-bottom: var(--margin-size);
 }
@@ -204,12 +193,10 @@ form button {
   border-radius: 5px;
   font-size: 1.15em;
 }
-
 .result.success {
   color: darkgreen;
   background-color: rgb(248, 255, 238);
 }
-
 .result.error {
   color: indianred;
   background-color: rgb(255, 238, 238);
@@ -219,7 +206,6 @@ form button {
   font-weight: bold;
   color: green;
 }
-
 .falsy {
   font-weight: bold;
   color: indianred;
@@ -228,22 +214,22 @@ form button {
 .relativetime {
   font-style: italic;
 }
-
 .relativetime:not(:empty)::before {
   content: "(";
   font-style: normal;
 }
-
 .relativetime:not(:empty)::after {
   content: ")";
   font-style: normal;
 }
 
 .small-count {
+  position: relative;
+  top: -1px;
   font-size: 0.9em;
-  display: block;
   font-style: italic;
 }
+
 [data-prefix]:before {
   content: attr(data-prefix);
 }
@@ -254,7 +240,6 @@ form button {
 .mt10 {
   margin-top: 10px;
 }
-
 .mt20 {
   margin-top: 20px;
 }
@@ -307,42 +292,35 @@ form button {
   table.nested {
     margin: 0;
   }
-
   table.nested thead {
     display: none;
   }
-
   table.nested tr {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
     margin: initial;
   }
-
   table.nested th,
   table.nested td {
     flex: 0 1 auto;
     padding-left: 0;
     padding-right: 3px;
   }
-
   table.nested th::after,
   table.nested td::after {
     content: ',';
   }
-
   table.nested th:first-child::after,
   table.nested td:first-child::after,
   table.nested th:last-child::after,
   table.nested td:last-child::after {
     content: '';
   }
-
   table.nested th:nth-child(-n+2),
   table.nested td:nth-child(-n+2) {
     padding-left: 10px;
   }
-
   table.nested th:first-child,
   table.nested td:first-child {
     flex: 0 0 100%;
@@ -353,7 +331,6 @@ form button {
   td:first-child {
     font-weight: bold;
   }
-
   th:last-child,
   td:last-child {
     min-width: 0;
