--- a/views/say.handlebars
+++ b/views/say.handlebars
@@ -17,7 +17,7 @@
 
 <div class="chat-transcript">
     <h3>Recent Chat Messages</h3>
-    <table class="nested">
+    <table class="smaller">
         <thead>
             <tr>
                 <th>Date</th>
@@ -26,7 +26,7 @@
             </tr>
         </thead>
         <tbody>
-        {{#each transcriptMessages}}
+        {{#each data/transcriptMessages}}
         <tr>
             <td><a href="https://chat.{{@root/data/chatDomain}}/users/{{this.chatUserId}}">{{this.username}}</a></td>
             <td>{{utcTimestamp this.date}}</td>
