--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -63,7 +63,6 @@ blockquote {
 }
 
 table {
-  max-width: 800px;
   min-width: 280px;
   margin: 2em 0;
 }
@@ -144,7 +143,7 @@ pre:empty::before {
 
 form {
   max-width: 800px;
-  margin-top: 30px;
+  margin: 2em 0 3em;
 }
 form * {
   font-size: 0.9rem;
@@ -171,6 +170,9 @@ form textarea {
 form button {
   padding: 8px 20px;
   font-size: 1em;
+}
+form .form-controls {
+  margin: 1.5em 0;
 }
 
 .dashboard {
