--- a/views/say.handlebars
+++ b/views/say.handlebars
@@ -30,7 +30,7 @@
         <tr>
             <td>{{utcTimestamp this.date}}</td>
             <td><a href="https://chat.{{@root/data/chatDomain}}/users/{{this.chatUserId}}">{{this.username}}</a></td>
-            <td>{{{this.message}}}</td>
+            <td>{{{this.messageHtml}}}</td>
         </tr>
         {{/each}}
         </tbody>
