--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -42,6 +42,16 @@ h2 {
   color: var(--heading-colour);
 }
 
+nav {
+  font-size: 0.9em;
+}
+nav .navitem {
+  text-decoration: none;
+}
+nav .navitem:last-child {
+  font-weight: bold;
+}
+
 ol,
 ul {
   padding-inline-start: 20px;
