added transcript message list size to the dashboard

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -132,6 +132,10 @@
                 <tr><td>duplicateResponseText</td><td>{{duplicateResponseText}}</td></tr>
                 <tr><td>maxMessageLength</td><td>{{maxMessageLength}}</td></tr>
                 <tr><td>maxMessageParts</td><td>{{maxMessageParts}}</td></tr>
+                <tr>
+                    <td>showTranscriptMessages</td>
+                    <td>{{showTranscriptMessages}}</td>
+                </tr>
                 <tr><td>funMode</td><td>{{{boolean funMode}}}</td></tr>
                 <tr><td>debug</td><td>{{{boolean debug}}}</td></tr>
                 <tr><td>verbose</td><td>{{{boolean verbose}}}</td></tr>
