Meta refresh fallback

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -190,4 +190,4 @@
 {{/with}}
 
 <base target="_blank" />
-<meta http-equiv="refresh" content="{{autoRefreshInterval}}" />
+<meta http-equiv="refresh" content="{{data/autoRefreshInterval}}" />
