passed upper activity bound ENV var to Handlebars view

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -169,6 +169,7 @@
                 <tr><td>canSendFunResponse</td><td>{{{boolean canSendFunResponse}}}</td></tr>
                 <tr><td>activityCounter</td><td>{{activityCounter}}</td></tr>
                 <tr><td>minActivityCountThreshold</td><td>{{minActivityCountThreshold}}</td></tr>
+                <tr><td>maxActivityCountThreshold</td><td>{{maxActivityCountThreshold}}</td></tr>
                 <tr><td>roomReachedMinimumActivityCount</td><td>{{{boolean roomReachedMinimumActivityCount}}}</td></tr>
                 <tr><td>shortIdleDurationMins</td><td>{{shortIdleDurationMins}} mins</td></tr>
                 <tr><td>roomBecameIdleAWhileAgo</td><td>{{{boolean roomBecameIdleAWhileAgo}}}
