--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -158,6 +158,8 @@
                     <pre>{{lastBotMessage}}</pre>
                     <div class="mt10">{{{lastBotMessageHtml}}}</div>
                 </td></tr>
+                <tr><td>funResponseCounter</td><td>{{funResponseCounter}}</td></tr>
+                <tr><td>canSendFunResponse</td><td>{{{boolean canSendFunResponse}}}</td></tr>
                 <tr><td>activityCounter</td><td>{{activityCounter}}</td></tr>
                 <tr><td>minActivityCountThreshold</td><td>{{minActivityCountThreshold}}</td></tr>
                 <tr><td>roomReachedMinimumActivityCount</td><td>{{{boolean roomReachedMinimumActivityCount}}}</td></tr>
