Add maxFunResponses to dashboard

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -165,6 +165,7 @@
                     <div class="mt10">{{{lastBotMessageHtml}}}</div>
                 </td></tr>
                 <tr><td>funResponseCounter</td><td>{{funResponseCounter}}</td></tr>
+                <tr><td>maxFunResponses</td><td>{{maxFunResponses}}</td></tr>
                 <tr><td>canSendFunResponse</td><td>{{{boolean canSendFunResponse}}}</td></tr>
                 <tr><td>activityCounter</td><td>{{activityCounter}}</td></tr>
                 <tr><td>minActivityCountThreshold</td><td>{{minActivityCountThreshold}}</td></tr>
