added Handlebars helper that calls the method with a given context

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -104,7 +104,7 @@
                                     <th>Link</th>
                                     <th>Id</th>
                                     <th>Type</th>
-                                    {{#if isStackOverflow}}<th>Required</th>{{/if}}
+                                    {{#if (call isStackOverflow)}}<th>Required</th>{{/if}}
                                 </tr>
                             </thead>
                             <tbody>
