Comment for debugOrVerbose, debugAndVerbose fns

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -57,7 +57,7 @@
                     <td></td>
                     {{/if}}
                 </tr>
-                <tr><td>Withdrawn Candidates <span class="small-count" data-prefix="(" data-suffix=")">{{arrWithdrawnNominees.length}}</span></td>
+                <tr><td>Withdrawn <span class="small-count" data-prefix="(" data-suffix=")">{{arrWithdrawnNominees.length}}</span></td>
                     {{#if arrWithdrawnNominees.length}}
                     <td><ul class="list">
                         {{#each arrWithdrawnNominees}}
