--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -126,6 +126,11 @@ table.nested td {
   padding: 3px 8px;
 }
 
+table.nested th:first-child,
+table.nested td:first-child {
+  width: 30%;
+}
+
 table.nested th:last-child,
 table.nested td:last-child {
   min-width: 0;
@@ -320,26 +325,31 @@ form .form-controls {
     flex-direction: row;
     margin: initial;
   }
+
   table.nested th,
   table.nested td {
     flex: 0 1 auto;
     padding-left: 0;
     padding-right: 3px;
   }
+
   table.nested th::after,
   table.nested td::after {
-    content: ',';
+    content: ",";
   }
+
   table.nested th:first-child::after,
   table.nested td:first-child::after,
   table.nested th:last-child::after,
   table.nested td:last-child::after {
-    content: '';
+    content: "";
   }
-  table.nested th:nth-child(-n+2),
-  table.nested td:nth-child(-n+2) {
+
+  table.nested th:nth-child(-n + 2),
+  table.nested td:nth-child(-n + 2) {
     padding-left: 10px;
   }
+
   table.nested th:first-child,
   table.nested td:first-child {
     flex: 0 0 100%;
