reversed transcript messages order as it makes sense to show the newest ones closest to the message input

--- a/views/say.handlebars
+++ b/views/say.handlebars
@@ -27,7 +27,7 @@
             </tr>
         </thead>
         <tbody>
-        {{#each data/transcriptMessages}}
+        {{#each (reverse data/transcriptMessages)}}
         <tr>
             <td data-message-id="{{this.messageId}}" class="cursor-pointer" title="click to reply to this message">{{this.messageId}}</td>
             <td>{{utcTimestamp this.date}}</td>
