added election BLT URL

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -74,6 +74,7 @@
                 </tr>
                 <tr><td>Opavote URL</td><td>{{{url opavoteUrl}}}</td></tr>
                 <tr><td>Voter stats</td><td>{{statVoters}}</td></tr>
+                <tr><td>BLT file URL</td><td>{{{url (getter this "electionBallotURL")}}}</td></tr>
             </table>
 
             <table>
