--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -146,6 +146,8 @@
                 <tr><td>debug</td><td>{{{boolean debug}}}</td></tr>
                 <tr><td>verbose</td><td>{{{boolean verbose}}}</td></tr>
                 <tr><td>keepAlive</td><td>{{{boolean keepAlive}}}</td></tr>
+                <tr><td>feedbackUrl</td><td>{{{url feedbackUrl}}}</td></tr>
+                <tr><td>repoUrl</td><td>{{{url repoUrl}}}</td></tr>
                 {{#with flags}}
                 <tr><td>flags.saidElectionEndingSoon</td><td>{{{boolean saidElectionEndingSoon}}}</td></tr>
                 <tr><td>flags.announcedWinners</td><td>{{{boolean announcedWinners}}}</td></tr>
