--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,7 +3,7 @@
 {{#with data}}
 
 <blockquote>
-    <p>I am <strong><a href="https://github.com/samliew/se-electionbot">ElectionBot</a></strong>, a chatbot that can answer commonly-asked questions about elections for sites on the Stack Exchange network.</p>
+    <p>I am <strong>{{{url botconfig/repoUrl "ElectionBot"}}}</strong>, a chatbot that can answer commonly-asked questions about elections for sites on the Stack Exchange network.</p>
     <p>This instance is listening to <strong>{{{url chatRoomUrl}}}</strong>.</p>
 </blockquote>
 
