--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -16,7 +16,7 @@
             <table>
                 <tr><td>Last updated</td><td>{{utcTimestamp updated}} <span class="relativetime" title="{{utcTimestamp updated}}"></span></td></tr>
                 <tr><td>Site</td><td>{{siteName}}</td></tr>
-                <tr><td>Hostname</td><td>{{{url siteUrl @root/data/siteHostname}}}</td></tr>
+                <tr><td>Hostname</td><td>{{{url (getter @root/data/election "siteUrl")}}}</td></tr>
                 <tr><td>Election Title</td><td>{{title}}</td></tr>
                 <tr><td>Election URL</td><td>{{{url electionUrl}}}</td></tr>
                 <tr><td>Election Chat</td>
@@ -104,7 +104,7 @@
                             <tbody>
                             {{#each electionBadges}}
                             <tr>
-                                <td><a href="{{@root/data/siteUrl}}/help/badges/{{this.badge_id}}">{{this.name}}</a></td>
+                                <td><a href="{{getter @root/data/election "siteUrl"}}/help/badges/{{this.badge_id}}">{{this.name}}</a></td>
                                 <td>{{this.badge_id}}</td>
                                 <td>{{this.type}}</td>
                                 {{#if (contextCall "isStackOverflow" @root/data/election)}}<td>{{{required this.required}}}</td>{{/if}}
