added a check if bot is in the designated room to the dashboard

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -5,6 +5,7 @@
 <blockquote>
     <p>I am <strong>{{{url botconfig/repoUrl "ElectionBot"}}}</strong>, a chatbot that can answer commonly-asked questions about elections for sites on the Stack Exchange network.</p>
     <p>This instance is listening to <strong>{{{url chatRoomUrl}}}</strong>.</p>
+    <p>The bot is {{#if isBotInRoom}}{{else}}<strong>not</strong> {{/if}}in the room.</p>
 </blockquote>
 
 <main class="dashboard">
